@@ -1,5 +1,5 @@
 DIST rb_libtorrent-0.15_rc4115.tar.bz2 3988740 RMD160 d576141b6485af387047e36bd26e2e317cb16177 SHA1 8810770bbbf0af91d51db1973a8572a8fe801ef3 SHA256 e9bbf7ddf386bb2da342b1d00bf98fcddfc9969e01824ed7d4241895c29102ed
 EBUILD rb_libtorrent-0.15_rc4115.ebuild 1946 RMD160 6bcdc2a3835e48700ae230784edbe92d0b4a0ae3 SHA1 2d8636052de03fe5bca17fc778ad272b9553d17e SHA256 e98f91424eca79b0a9161ed096fbd1a4fc64ad0da43f6a1f49d97d3f5d2d7bd8
-EBUILD rb_libtorrent-9999.ebuild 1334 RMD160 a9a6ed2acaac80914395caea240ae14fb1006186 SHA1 a662881a07858bc61db3c3c3f2188c04ea4d3ae6 SHA256 183a396a7df39c3d5201d8bd714cffa52214ccd55cd9c0a6e1f1a69d57d1da0b
-MISC ChangeLog 206 RMD160 88cacee58691c5f1842c62ccb1b71c49be832de5 SHA1 a59cb50d7e11dd7ee715e6676a484dc608b0cbfb SHA256 04ddb0b9169705c36bb733d8c997cbce3a58f3b070ebb5b0d689374e1c0d58c2
+EBUILD rb_libtorrent-9999.ebuild 2074 RMD160 d219583ba3dfe7ba1c0c4764138fc4aa73d431c6 SHA1 e4b06d9a1b56c59430926b894f8a36fdd2850866 SHA256 a0000d9da4ab74d441f67b4b56cb1eeb1fdf72a8c7f2c9db336ad714d86d9aa5
+MISC ChangeLog 300 RMD160 d3d5978d83d86eb42f7ed509251719418ff12cc7 SHA1 a0bd6794bb9341026f830feadacedf6b2879196d SHA256 10d0249dece41df8720bf829f776a6eafe7434ff199f966fb3efec2d08b49a92
 MISC metadata.xml 672 RMD160 73409e977465f46b094fe0f34e35fba3a0889ff8 SHA1 f2ffefff1a2c7604eec1316de2dd0e42a37f727e SHA256 627ed199a59869ad7bcfeefa44d824c658d0cc56c4e971f89541372998ce71cb
